--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "*"
   }
 }
